# cmake

./: CMakeLists.txt  OLASConfig.h.in  adder.cpp  configure.bat  main.cpp  readme.md
Adder/: adder.cpp
